--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "react-router-dom": "^7.5.2"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
