--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://xOsitax.github.io/your-repo-name",
+  "homepage": "https://xOsitax.github.io/React-Assigment1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
